--- a/cubic.html
+++ b/cubic.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Cubic Equation Calculator - Online</title>
+    </head>
+    <body>
 
+        <h1>Cubic Equation Calculator - Online</h1>
+
+        <form method="post" action="" onsubmit="test(this.form.a.value, this.form.b.value, this.form.c.value, this.form.d.value);return false;">
+            A:
+            <input type="number" name="a" value="800" size="25" maxlength="25">
+
+            <br>
+            B:
+            <input type="number" name="b" value="800" size="25" maxlength="25">
+
+            <br>
+            C:
+            <input type="number" name="c" value="800" size="25" maxlength="25">
+          
+            <br>
+            D:
+            <input type="number" name="d" value="800" size="25" maxlength="25">
+
+            <br>
+            <button onclick="test(this.form.a.value, this.form.b.value, this.form.c.value, this.form.d.value);">Calculate Cubic</button>
+
+            <h4>Output:</h4>
+            <div id="log"></div>
+            <mark>
+                <b id="roots"></b>
+            </mark>
+        </form>
+
+        <script src="cubic.js" type="text/javascript"></script>
+
+        <script type="text/javascript">
+        const elm_log = document.querySelector("#log")
+        const elm_roots = document.querySelector("#roots")
+
+        window.addEventListener("load", () => {
+            document.querySelector("button").click()
+        })
+        </script>
+
+    </body>
+</html>
