--- a/cubic.html
+++ b/cubic.html
@@ -7,7 +7,7 @@
 
         <h1>Cubic Equation Calculator - Online</h1>
 
-        <form method="post" action="" onsubmit="test(this.form.a.value, this.form.b.value, this.form.c.value, this.form.d.value);return false;">
+        <form name="form" method="post" action="" onsubmit="test(form.a.value, form.b.value, form.c.value, form.d.value);return false;">
             A:
             <input type="number" name="a" value="800" size="25" maxlength="25">
 
@@ -24,7 +24,7 @@
             <input type="number" name="d" value="800" size="25" maxlength="25">
 
             <br>
-            <button onclick="test(this.form.a.value, this.form.b.value, this.form.c.value, this.form.d.value);">Calculate Cubic</button>
+            <!-- <button onclick="test(this.form.a.value, this.form.b.value, this.form.c.value, this.form.d.value);">Calculate Cubic</button> -->
 
             <h4>Output:</h4>
             <div id="log"></div>
@@ -39,8 +39,15 @@
         const elm_log = document.querySelector("#log")
         const elm_roots = document.querySelector("#roots")
 
+
+
+        const test = (a, b, c, d) => {
+            const res = CubicSolve(a, b, c, d)
+            console.log(res)
+        }
+
         window.addEventListener("load", () => {
-            document.querySelector("button").click()
+            // document.querySelector("button").click()
         })
         </script>
 
