--- a/cubic.html
+++ b/cubic.html
@@ -9,22 +9,22 @@
 
         <form name="form" method="post" action="" onsubmit="test(form.a.value, form.b.value, form.c.value, form.d.value);return false;">
             A:
-            <input type="number" name="a" value="800" size="25" maxlength="25">
+            <input type="number" name="a" value="1" size="25" maxlength="25">
 
             <br>
             B:
-            <input type="number" name="b" value="800" size="25" maxlength="25">
+            <input type="number" name="b" value="2" size="25" maxlength="25">
 
             <br>
             C:
-            <input type="number" name="c" value="800" size="25" maxlength="25">
+            <input type="number" name="c" value="2" size="25" maxlength="25">
           
             <br>
             D:
-            <input type="number" name="d" value="800" size="25" maxlength="25">
+            <input type="number" name="d" value="2" size="25" maxlength="25">
 
             <br>
-            <!-- <button onclick="test(this.form.a.value, this.form.b.value, this.form.c.value, this.form.d.value);">Calculate Cubic</button> -->
+            <button>Calculate Cubic</button>
 
             <h4>Output:</h4>
             <div id="log"></div>
@@ -42,12 +42,12 @@
 
 
         const test = (a, b, c, d) => {
-            const res = CubicSolve(a, b, c, d)
+            const res = cubicSolve(a, b, c, d)
             console.log(res)
         }
 
         window.addEventListener("load", () => {
-            // document.querySelector("button").click()
+            document.querySelector("button").click()
         })
         </script>
 
