--- a/cubic.html
+++ b/cubic.html
@@ -39,11 +39,17 @@
         const elm_log = document.querySelector("#log")
         const elm_roots = document.querySelector("#roots")
 
-
-
         const test = (a, b, c, d) => {
             const res = cubicSolve(a, b, c, d)
             console.log(res)
+
+            const display = (value) => {
+                if(value.i === 0)
+                    return `${value.real}`
+                else
+                    return `${value.real} + ${value.i} <i>i</i>`
+            }
+            elm_roots.innerHTML = `X<sub>1</sub> = ${display(res[0])}<br>X<sub>2</sub> = ${display(res[1])}<br>X<sub>3</sub> = ${display(res[2])}<br>`
         }
 
         window.addEventListener("load", () => {
