--- a/cubic.html
+++ b/cubic.html
@@ -6,6 +6,17 @@
     <body>
 
         <h1>Cubic Equation Calculator - Online</h1>
+        <p>
+            A <b>X<sup>3</sup></b>
+            +
+            B <b></b>X<sup>2</sup></b>
+            +
+            C <b>X<sup>1</sup></b>
+            +
+            D
+            =
+            0
+        </p>
 
         <form name="form" method="post" action="" onsubmit="test(form.a.value, form.b.value, form.c.value, form.d.value);return false;">
             A:
