fix closing b tag

--- a/cubic.html
+++ b/cubic.html
@@ -9,7 +9,7 @@
         <p>
             A <b>X<sup>3</sup></b>
             +
-            B <b></b>X<sup>2</sup></b>
+            B <b>X<sup>2</sup></b>
             +
             C <b>X<sup>1</sup></b>
             +
