--- a/cubic.html
+++ b/cubic.html
@@ -19,29 +19,19 @@
         </p>
 
         <form name="form" method="post" action="" onsubmit="test(form.a.value, form.b.value, form.c.value, form.d.value);return false;">
-            A:
-            <input type="number" name="a" value="1" size="25" maxlength="25">
+            A: <input type="number" name="a" value="1" size="25" maxlength="25">
 
-            <br>
-            B:
-            <input type="number" name="b" value="2" size="25" maxlength="25">
+            <br>B: <input type="number" name="b" value="2" size="25" maxlength="25">
 
-            <br>
-            C:
-            <input type="number" name="c" value="2" size="25" maxlength="25">
+            <br>C: <input type="number" name="c" value="2" size="25" maxlength="25">
           
-            <br>
-            D:
-            <input type="number" name="d" value="2" size="25" maxlength="25">
+            <br>D: <input type="number" name="d" value="2" size="25" maxlength="25">
 
-            <br>
-            <button>Calculate Cubic</button>
+            <br><button>Calculate Cubic</button>
 
             <h4>Output:</h4>
             <div id="log"></div>
-            <mark>
-                <b id="roots"></b>
-            </mark>
+            <mark><b id="roots"></b></mark>
         </form>
 
         <script src="cubic.js" type="text/javascript"></script>
