inline `p` tag description math expression

--- a/cubic.html
+++ b/cubic.html
@@ -6,17 +6,7 @@
     <body>
 
         <h1>Cubic Equation Calculator - Online</h1>
-        <p>
-            A <b>X<sup>3</sup></b>
-            +
-            B <b>X<sup>2</sup></b>
-            +
-            C <b>X<sup>1</sup></b>
-            +
-            D
-            =
-            0
-        </p>
+        <p>A <b>X<sup>3</sup></b> + B <b>X<sup>2</sup></b> + C <b>X<sup>1</sup></b> + D = 0</p>
 
         <form name="form" method="post" action="" onsubmit="test(form.a.value, form.b.value, form.c.value, form.d.value);return false;">
             A: <input type="number" name="a" value="1" size="25" maxlength="25">
